--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
   <title>SinglePage</title>
 </head>
 <body>
-  
+  <div class="container">
+    <header>
+      <div class="img-wrapper">
+        <img src="/portifolio/img/bg.jpg" alt="">
+    </div>
+    <div class="banner">
+      <h1>Web Developer & Front End Designer</h1>
+      <p>Nikolas Prudente Guedes</p>
+      <button>Saiba Mais</button>
+
+    </div>
+    </header>
+
+  </div>
 </body>
 </html>
