--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/portifolio/css/style.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="img/site.webmanifest">
   <title>SinglePage</title>
 </head>
 <body>
   <div class="container">
+
+      <div class="hamburguer">
+          <div class="line" id="line1"></div>
+          <div class="line" id="line2"></div>
+          <div class="line" id="line3"></div>
+          <span>Fechar</span>
+      </div>
+  
+
     <header>
       <div class="img-wrapper">
         <img src="/portifolio/img/bg.jpg" alt="">
@@ -25,7 +34,23 @@
 
     </div>
     </header>
-
+    <div class="sidebar">
+      <nav>
+        <ul class="menu">
+          <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+        </ul>
+      </nav>
+      <div class="social-media">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-github-alt"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+      </div>
+    </div>
   </div>
 </body>
+<script src="/portifolio/script.js"></script>
 </html>
