--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/portifolio/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
@@ -25,7 +25,7 @@
 
     <header>
       <div class="img-wrapper">
-        <img src="/portifolio/img/bg.jpg" alt="">
+        <img src="/img/bg.jpg" alt="">
     </div>
     <div class="banner">
       <h1>Web Developer & Front End Designer</h1>
@@ -34,8 +34,9 @@
 
     </div>
     </header>
-    <div class="sidebar">
+    <aside class="sidebar">
       <nav>
+        <!-- section.sessao-conhecimentos>(.sessao-header>h1)>+.conhecimentos>(.conhecimento>(.conhecimento-header>i.fab+h3).conhecimento-text>p{lorem30}*6 -->
         <ul class="menu">
           <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
           <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
@@ -49,8 +50,78 @@
         <a href="#"><i class="fab fa-github-alt"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
       </div>
-    </div>
+    </aside>
+    <section class="sessao-conhecimentos">
+      <div class="sessao-header">
+        <h1>Conhecimentos</h1>
+      </div>
+      <div class="conhecimentos">
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fab fa-html5"></i>
+            <h3>HTML</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, 
+              labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet.
+               Rem ab obcaecati totam 
+               ipsum!
+              </p>
+          </div>
+        </div>
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fab fa-css3-alt"></i>
+            <h3>CSS</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+          </div>
+        </div>
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fas fa-pencil-alt"></i>
+            <h3>Design</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+          </div>
+        </div>
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fab fa-js"></i>
+            <h3>Javascript</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+          </div>
+        </div>
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fab fa-bootstrap"></i>
+            <h3>Bootstrap</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+          </div>
+        </div>
+        <div class="conhecimento">
+          <div class="conhecimento-header">
+            <i class="fab fa-github"></i>
+            <h3>Git e GitHub</h3>
+          </div>
+          <div class="conhecimento-text">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+          </div>
+        </div>
+        <div class="conhecimentos-img-wrapper">
+          <img src="/img/conhecimentos.png" alt="imagem conhecimentos">
+        </div>
+
+      </div>
+    </section>
+    
   </div>
 </body>
-<script src="/portifolio/script.js"></script>
+<script src="/js/script.js"></script>
 </html>
