--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="manifest" href="img/site.webmanifest">
+  <link rel="manifest" href="site.webmanifest">
   <title>SinglePage</title>
 </head>
 <body>
@@ -38,17 +38,17 @@
       <nav>
         <!-- section.sessao-conhecimentos>(.sessao-header>h1)>+.conhecimentos>(.conhecimento>(.conhecimento-header>i.fab+h3).conhecimento-text>p{lorem30}*6 -->
         <ul class="menu">
-          <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
+          <li class="menu-item"><a href="http://127.0.0.1:5500/index.html" class="menu-link">Home</a></li>
+          <li class="menu-item"><a href="#Conhecimento" class="menu-link">Conhecimento</a></li>
           <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
           <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
           <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
         </ul>
       </nav>
       <div class="social-media">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-github-alt"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.facebook.com/nikolas.prudente.9" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://github.com/nikhenry2212" target="_blank"><i class="fab fa-github-alt"></i></a>
+        <a href="#"><i class="fab fa-instagram" target="_blank"></i></a>
       </div>
     </aside>
     <section class="sessao-conhecimentos">
@@ -117,10 +117,78 @@
         <div class="conhecimentos-img-wrapper">
           <img src="/img/conhecimentos.png" alt="imagem conhecimentos">
         </div>
-
       </div>
     </section>
-    
+    <div class="sessao-projetos" id="projetos">
+      <div class="sessao-header">
+        <h1>Projetos</h1>
+      </div>
+      <div class="projetos">
+        <div class="card">
+          <div class="card-img-wrapper">
+            <img src="img/proj1.jpg" alt="imagem do projeto ToDo" />
+          </div>
+          <div class="card-info">
+            <h2>ToDo List</h2>
+            <h3>Javascript</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus vero maxime amet magnam doloribus eos consequatur expedita architecto hic?</p>
+            <button class="btn">Saiba Mais</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img-wrapper">
+            <img src="img/proj2.jpg" alt="imagem do projeto Maratona" />
+          </div>
+          <div class="card-info">
+            <h2>Maratona</h2>
+            <h3>HTML, CSS</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
+            <button class="btn">Saiba Mais</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img-wrapper">
+            <img src="img/proj3.jpg" alt="imagem do projeto Casa Bela" />
+          </div>
+          <div class="card-info">
+            <h2>Casa Bela</h2>
+            <h3>HTML</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est pariatur soluta doloremque tempore nisi placeat, eveniet voluptate recusandae. Eius, sapiente?</p>
+            <button class="btn">Saiba Mais</button>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <section class="sessao-contato">
+      <div class="contato-wrapper">
+        <div class="contato-left"></div>
+        <div class="contato-right">
+          <h1>Contato</h1>
+          <form>
+            <div class="input-group">
+              <input type="text" class="field" id="nome">
+              <label for="nome" class="field-label">Nome</label>
+            </div>
+            <div class="input-group">
+              <input type="text" class="field" id="email">
+              <label for="email" class="field-label">E-mail</label>
+            </div>
+            <div class="input-group">
+              <textarea class="field" id="mensagem"></textarea>
+              <label for="mensagem"class="field-label">Mensagem</label>
+            </div>
+            <button type="submit" class="btn btn-submit">Enviar</button>
+          </form>
+        </div>
+      </div>
+    </section>
+    <section class="sessao-orcamento">
+      <div class="orcamento-wrapper">
+        <h1>Faça um Orçamento</h1>
+      </div>
+    </section>
   </div>
 </body>
 <script src="/js/script.js"></script>
