:package: Calculo de Orçamento
Calculo de Orçamento usando JS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,46 +13,48 @@
   <link rel="manifest" href="site.webmanifest">
   <title>SinglePage</title>
 </head>
+
 <body>
   <div class="container">
 
-      <div class="hamburguer">
-          <div class="line" id="line1"></div>
-          <div class="line" id="line2"></div>
-          <div class="line" id="line3"></div>
-          <span>Fechar</span>
-      </div>
-  
+    <div class="hamburguer">
+      <div class="line" id="line1"></div>
+      <div class="line" id="line2"></div>
+      <div class="line" id="line3"></div>
+      <span>Fechar</span>
+    </div>
 
-    <header>
+
+    <header id="home">
       <div class="img-wrapper">
         <img src="/img/bg.jpg" alt="">
-    </div>
-    <div class="banner">
-      <h1>Web Developer & Front End Designer</h1>
-      <p>Nikolas Prudente Guedes</p>
-      <button>Saiba Mais</button>
+      </div>
+      <div class="banner">
+        <h1>Web - Technical Developer</h1>
+        <p>Nikolas Prudente Guedes</p>
+        <button>Saiba Mais</button>
 
-    </div>
+      </div>
     </header>
     <aside class="sidebar">
       <nav>
         <!-- section.sessao-conhecimentos>(.sessao-header>h1)>+.conhecimentos>(.conhecimento>(.conhecimento-header>i.fab+h3).conhecimento-text>p{lorem30}*6 -->
         <ul class="menu">
-          <li class="menu-item"><a href="http://127.0.0.1:5500/index.html" class="menu-link">Home</a></li>
-          <li class="menu-item"><a href="#Conhecimento" class="menu-link">Conhecimento</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-          <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+          <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
+          <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimento</a></li>
+          <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+          <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
+          <li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>
         </ul>
       </nav>
       <div class="social-media">
         <a href="https://www.facebook.com/nikolas.prudente.9" target="_blank"><i class="fab fa-facebook"></i></a>
         <a href="https://github.com/nikhenry2212" target="_blank"><i class="fab fa-github-alt"></i></a>
-        <a href="#"><i class="fab fa-instagram" target="_blank"></i></a>
+        <a href="https://www.linkedin.com/in/nikolas-prudente-guedes-97b14612b/" target="_blank"><i class="fab fa-linkedin"
+            target="_blank"></i></a>
       </div>
     </aside>
-    <section class="sessao-conhecimentos">
+    <section class="sessao-conhecimentos" id="conhecimentos">
       <div class="sessao-header">
         <h1>Conhecimentos</h1>
       </div>
@@ -62,11 +65,11 @@
             <h3>HTML</h3>
           </div>
           <div class="conhecimento-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos,
               labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet.
-               Rem ab obcaecati totam 
-               ipsum!
-              </p>
+              Rem ab obcaecati totam
+              ipsum!
+            </p>
           </div>
         </div>
         <div class="conhecimento">
@@ -75,7 +78,9 @@
             <h3>CSS</h3>
           </div>
           <div class="conhecimento-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam
+              incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!
+            </p>
           </div>
         </div>
         <div class="conhecimento">
@@ -84,7 +89,9 @@
             <h3>Design</h3>
           </div>
           <div class="conhecimento-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam
+              incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!
+            </p>
           </div>
         </div>
         <div class="conhecimento">
@@ -93,7 +100,9 @@
             <h3>Javascript</h3>
           </div>
           <div class="conhecimento-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam
+              incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!
+            </p>
           </div>
         </div>
         <div class="conhecimento">
@@ -102,7 +111,9 @@
             <h3>Bootstrap</h3>
           </div>
           <div class="conhecimento-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam
+              incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!
+            </p>
           </div>
         </div>
         <div class="conhecimento">
@@ -111,7 +122,9 @@
             <h3>Git e GitHub</h3>
           </div>
           <div class="conhecimento-text">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam
+              incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!
+            </p>
           </div>
         </div>
         <div class="conhecimentos-img-wrapper">
@@ -131,7 +144,8 @@
           <div class="card-info">
             <h2>ToDo List</h2>
             <h3>Javascript</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus vero maxime amet magnam doloribus eos consequatur expedita architecto hic?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus vero maxime amet magnam
+              doloribus eos consequatur expedita architecto hic?</p>
             <button class="btn">Saiba Mais</button>
           </div>
         </div>
@@ -142,7 +156,8 @@
           <div class="card-info">
             <h2>Maratona</h2>
             <h3>HTML, CSS</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas ipsam ullam consectetur ab facilis cumque.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vero aliquam? Pariatur libero voluptas
+              ipsam ullam consectetur ab facilis cumque.</p>
             <button class="btn">Saiba Mais</button>
           </div>
         </div>
@@ -153,64 +168,84 @@
           <div class="card-info">
             <h2>Casa Bela</h2>
             <h3>HTML</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est pariatur soluta doloremque tempore nisi placeat, eveniet voluptate recusandae. Eius, sapiente?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est pariatur soluta doloremque tempore nisi
+              placeat, eveniet voluptate recusandae. Eius, sapiente?</p>
             <button class="btn">Saiba Mais</button>
           </div>
         </div>
       </div>
 
-    </section>
+      </section>
 
-    <section class="sessao-contato">
-      <div class="contato-wrapper">
-        <div class="contato-left"></div>
-        <div class="contato-right">
-          <h1>Contato</h1>
+      <section class="sessao-contato" id="contato">
+        <div class="contato-wrapper">
+          <div class="contato-left"></div>
+          <div class="contato-right">
+            <h1>Contato</h1>
+            <form>
+              <div class="input-group">
+                <input type="text" class="field" id="nome">
+                <label for="nome" class="field-label">Nome</label>
+              </div>
+              <div class="input-group">
+                <input type="text" class="field" id="email">
+                <label for="email" class="field-label">E-mail</label>
+              </div>
+              <div class="input-group">
+                <textarea class="field" id="mensagem"></textarea>
+                <label for="mensagem" class="field-label">Mensagem</label>
+              </div>
+              <button type="submit" class="btn btn-submit">Enviar</button>
+            </form>
+          </div>
+        </div>
+      </section>
+      <section class="sessao-orcamento" id="orcamento">
+        <div class="orcamento-wrapper">
+          <h1>Faça um orçamento</h1>
           <form>
-            <div class="input-group">
-              <input type="text" class="field" id="nome">
-              <label for="nome" class="field-label">Nome</label>
+            <label for="qtde">Qtde de Páginas</label>
+            <input type="number" min="1" name="qtde" id="qtde">
+            <label for="js">Preciso de um script JS</label>
+            <input type="checkbox" name="js" id="js">
+            <label>Layout</label>
+            <div class="group-layout">
+              <div>
+                <input type="radio" name="layout" id="layout-sim">
+                <label for="layout-sim">Preciso de um layout</label>
+              </div>
+              <div>
+                <input type="radio" name="layout" id="layout-nao">
+                <label for="layout-nao">Já tenho um layout</label>
+              </div>
             </div>
-            <div class="input-group">
-              <input type="text" class="field" id="email">
-              <label for="email" class="field-label">E-mail</label>
-            </div>
-            <div class="input-group">
-              <textarea class="field" id="mensagem"></textarea>
-              <label for="mensagem"class="field-label">Mensagem</label>
-            </div>
-            <button type="submit" class="btn btn-submit">Enviar</button>
+            <label for="prazo">Prazo</label>
+            <input type="range" name="prazo" id="prazo" min="1" max="10">
+            <label id="preco">R$ 0,00</label>
+            <button class="btn btn-orcamento" type="submit">Enviar</button>
           </form>
         </div>
-      </div>
-    </section>
-    <section class="sessao-orcamento" id="orcamento">
-      <div class="orcamento-wrapper">
-        <h1>Faça um orçamento</h1>
-        <form>
-          <label for="qtde">Qtde de Páginas</label>
-          <input type="number" min="1" name="qtde" id="qtde">
-          <label for="js">Preciso de um script JS</label>
-          <input type="checkbox" name="js" id="js">
-          <label>Layout</label>
-          <div class="group-layout">
-            <div>
-              <input type="radio" name="layout" id="layout-sim">
-              <label for="layout-sim">Preciso de um layout</label>
-            </div>
-            <div>
-              <input type="radio" name="layout" id="layout-nao">
-              <label for="layout-nao">Já tenho um layout</label>
-            </div>
+      </section>
+      <footer>
+        <div class="footer-content">
+          <p>
+            Copyright &copy; 2020, NIKOLAS PRUDENTE - Todos os direitos reservasdos
+          </p>
+          <div class="social-list">
+            <ul>
+              <li><a href=""><i class="fab fa-facebook"></i></a></li>
+              <li"><a href=""><i class="fab fa-github"></i></a></li>
+              <li"><a href=""><i class="fab fa-linkedin"></i></a></li>
+            </ul>
+
           </div>
-          <label for="prazo">Prazo</label>
-          <input type="range" name="prazo" id="prazo" min="1" max="10">
-          <label id="preco">R$ 0,00</label>
-          <button class="btn btn-orcamento" type="submit">Enviar</button>
-        </form>
-      </div>
-    </section>
-  </div>
+        </div>
+      </footer>
+      <a href="#home" id="link-topo">
+        <i class="fas fa-arrow-up"></i>
+      </a>
+    </div>
 </body>
 <script src="/js/script.js"></script>
+
 </html>
