--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
             <img src="img/proj1.jpg" alt="imagem do projeto ToDo" />
           </div>
           <div class="card-info">
-            <h2>ToDo List</h2>
-            <h3>Javascript</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate ducimus vero maxime amet magnam
-              doloribus eos consequatur expedita architecto hic?</p>
-            <button class="btn">Saiba Mais</button>
+            <h2>Noomis</h2>
+            <h3>Projeto</h3>
+            <p>Platafoma de noticias sobre Tecnologia.</p>
+             <a href="https://noomis.febraban.org.br/home" target="_blank"><button class="btn">Saiba Mais
+            </button></a>
           </div>
         </div>
         <div class="card">
@@ -233,9 +233,9 @@
           </p>
           <div class="social-list">
             <ul>
-              <li><a href=""><i class="fab fa-facebook"></i></a></li>
-              <li"><a href=""><i class="fab fa-github"></i></a></li>
-              <li"><a href=""><i class="fab fa-linkedin"></i></a></li>
+              <li><a href="https://www.facebook.com/nikolas.prudente.9"><i class="fab fa-facebook"></i></a></li>
+              <li"><a href="https://github.com/nikhenry2212"><i class="fab fa-github"></i></a></li>
+              <li"><a href="https://www.linkedin.com/in/nikolas-prudente-guedes-97b14612b/"><i class="fab fa-linkedin"></i></a></li>
             </ul>
 
           </div>
