:beetle: Erro ao carregar links
Remoção de bugs

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/css/style.css">
-
+  <link rel="stylesheet" href="/portifolio/css/style.css">
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
@@ -27,7 +26,7 @@
 
     <header id="home">
       <div class="img-wrapper">
-        <img src="/img/bg.jpg" alt="">
+        <img src="/portifolio/img/bg.jpg" alt="">
       </div>
       <div class="banner">
         <h1>Web - Technical Developer</h1>
@@ -128,7 +127,7 @@
           </div>
         </div>
         <div class="conhecimentos-img-wrapper">
-          <img src="/img/conhecimentos.png" alt="imagem conhecimentos">
+          <img src="/portifolio/img/conhecimentos.png" alt="imagem conhecimentos">
         </div>
       </div>
     </section>
@@ -246,6 +245,6 @@
       </a>
     </div>
 </body>
-<script src="/js/script.js"></script>
+<script src="/portifolio/js/script.js"></script>
 
 </html>
